[tool.poetry]
name = "your-films-helper-bot"
version = "0.1.0"
description = "First telegram bot"
authors = ["Mykola322 <mikolasutij2009@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
python-dotenv = "^1.0.1"
aiogram = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
